testsuite/tests/grammar/invalid_lkt/several_main_rules.lkt
grammar FooGrammar {
    @main_rule main_rule1 <- Example("example")
    @main_rule main_rule2 <- Example("example")
}
